# FundamentaLLM

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: main.py
backend/ai/: agent.py
backend/ai/provider/: deep_infra.py
backend/crud/: conversation.py  core.py
backend/db/: conversation.py  core.py
backend/routes/: core.py
backend/routes/chat/: api.py
backend/routes/chat/templates/: chat.html  chat_index.html
backend/routes/chat/templates/partials/: _chat_messages_append.html  _import_result.html  _macros.html  chat_message_response.html  chat_messages.html
backend/templates/: base.html  index.html
