[project]
name = "fundamentallm"
version = "0.1.0"
description = "The Fundamental Analyst in your pocket."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "fastapi[standard]>=0.116.1",
    "sqlmodel>=0.0.24",
    "asyncpg>=0.30.0",
    "pydantic-ai>=0.6.2",
    "openai>=1.99.6",
    "jinja2>=3.1.6",
]
