[project]
name = "fundamentallm"
version = "0.1.0"
description = "The Fundamental Analyst in your pocket."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "openai>=1.99.6",
    "pydantic-ai>=0.6.2",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
]
